<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.mobile.ui.auth.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />

        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.mobile.ui.auth.register.RegisterFragment"
        android:label="@string/register_title"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.mobile.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_dashboardFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>